[tool.poetry]
name = "securityreporter"
version = "0.0.0"
description = "A Python wrapper for the Reporter API."
authors = [
    "Alexander Krigsman <alexander.krigsman@dongit.nl>",
]
maintainers = [
    "Stefan van der Lugt <stefan.vanderlugt@dongit.nl>",
]
readme = "README.rst"
homepage = "https://securityreporter.app/"
repository = "https://github.com/dongit-org/python-reporter"
documentation = "https://python-reporter.readthedocs.io/"
packages = [
    { include = "reporter" },
]

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^23.12.1"
mypy = "^1.8.0"
pytest-docker = "^3.1.0"
docker = "^7.1.0"
responses = "^0.24.1"
types-requests = "^2.28.0"
coverage = "^7.4.0"
Sphinx = "^7.0.0"
pylint = "^3.0.3"
tox = "^4.11.4"
sphinx-rtd-theme = "^1.0.0"
types-docker = "^7.1.0.20250916"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
